# glyx-mcp

./: .cursorrules  .dockerignore  .env.example  .env.production  .flake8  .gcloudignore  .gitignore  .glyx-mcp-prompts.json  .glyx-mcp-prompts.json.example  .mcp.json.example  .pre-commit-config.yaml  .sessions.db  AGENTS.md  CLAUDE.md  DEPLOYMENT_CHANGELOG.md  DEPLOYMENT_SUMMARY.md  DESCRIPTION.md  Dockerfile  Dockerfile.fast  Dockerfile.production  IMPLEMENTATION_SUMMARY.md  Makefile  PRODUCTION_READY.md  QUICKSTART.md  README.md  TESTING_PLAN.md  add_function.py  authentication.mdx  compose.yml  create_feature_workflow.py  demo_hitl_agent.py  demo_linear_agent.py  deploy.sh  fly.toml  glyx_orchestrator.sqlite  hello.md  inspect_fastmcp.py  install.sh  introduction.mdx  mint.json  (+10 more)
.claude/: settings.local.json
.claude/hooks/: config.json  mcp-logger.sh
.github/workflows/: ci.yml  deploy.yml
agents/: claude.json  codex.json  cursor.json  cursor_agent.py  gemini.json  grok.json  zilliz.json
cloud-template/: Dockerfile  pyproject.toml  server.py
docs/: ARCHITECTURE.md  COMPOSABLE_API_AGENT.md  DEPLOYMENT.md  MINTLIFY_SETUP.md  ORGANIZATION.md  REFACTOR_PROGRESS.md  REFACTOR_STATUS.md  ROUTE_EXTRACTION_PLAN.md  composite-debug-agent-roadmap.md  linear_agent_mvp.md  mcp-routing.md  openapi.json  pydantic-types.md
docs/api-reference/: introduction.mdx
docs/examples/: docker-mcp-catalog.yaml
docs/features/: visual-layer.md
docs/guides/: agent-orchestration.mdx  feature-pipelines.mdx  memory-management.mdx  webhooks.mdx
docs/process/: feature_lifecycle.md
infra/: .gitignore  locals.tf  main.tf  outputs.tf  progress.txt  terraform.tf  terraform.tfvars.example  variables.tf
scripts/: debug_tool_events.py  deploy.sh  list_devices.py  list_users.py  pair_display.py  test_github_webhook.sh  test_hitl.py  test_notifications.py  test_supabase_realtime.py  update_openapi.sh  validate_deployment.py
src/api/: local_executor.py  server.py  session.py  utils.py
src/api/integrations/: linear.py
src/api/models/: __init__.py  linear.py  notifications.py
src/api/routes/: agent_tasks.py  agents.py  auth.py  cloud_instances.py  composable_workflows.py  deployments.py  devices.py  github.py  health.py  hitl.py  linear.py  memory.py  organizations.py  pair.py  root.py  sequences.py  streaming.py  tasks.py  workflows.py
src/api/services/: cloud_deployer.py
src/api/webhooks/: __init__.py  base.py  github.py  linear.py
src/cli/: __init__.py
src/framework/: cli.py  lifecycle.py
src/glyx/cli/: __init__.py  cloud.py  pair.py
src/glyx/core/: agent.py  pipelines.py  registry.py  supabase_loader.py
src/glyx/mcp/: composable_agent.py  realtime.py  server.py  settings.py  types.py
src/glyx/mcp/integrations/: claude_code.py  linear.py
src/glyx/mcp/memory/: mem0.py
src/glyx/mcp/models/: execution.py  response.py
src/glyx/mcp/orchestration/: __init__.py  orchestrator.py  prompts.py
src/glyx/mcp/tools/: agent_crud.py  (+7 more)
src/glyx/tasks/: __init__.py  server.py  settings.py
src/glyx_mcp/: __init__.py  coding_agents.py  composable_agent.py  daemon.py  glyx_mcp_server.py  local_executor.py  logging.py  opencode_agent.py  prompt_config.py  prompts.py  server.py  settings.py
src/glyx_mcp/agents/: __init__.py  orchestrator.py
src/glyx_mcp/config/: aider.json  deepseek_r1.json  gemini.json  grok.json  kimi_k2.json  opencode.json  shot_scraper.json
src/glyx_mcp/models/: task.py
src/glyx_mcp/orchestration/: orchestrator.py  prompts.py
src/glyx_mcp/tools/: interact_with_user.py  manage_worktree.py  use_aider.py  use_grok.py  use_memory.py  use_opencode.py  use_shot_scraper.py  use_tasks.py
src/integration_agents/: __init__.py  linear_agent.py
src/mcp/: server.py
src/python-sdk/: LICENSE  README.md  pyproject.toml
src/python-sdk/agents/: cursor_agent.py  grok.json  zilliz.json
src/python-sdk/src/glyx_python_sdk/: __init__.py  agent.py  agent_types.py  composable_agents.py  composable_workflows.py  exceptions.py  memory.py  orchestrator.py  pipelines.py  prompts.py  registry.py  settings.py  supabase_loader.py  types.py  websocket_manager.py  workflows.py
src/python-sdk/src/glyx_python_sdk/agents/: __init__.py  cursor_agent.py  documentation_agent.py  glyx_sdk_agent.py  workflow_agent.py
src/python-sdk/src/glyx_python_sdk/configs/: __init__.py  aider.json  claude.json  codex.json  cursor.json  deepseek_r1.json  gemini.json  grok.json  kimi_k2.json  opencode.json
src/python-sdk/src/glyx_python_sdk/integrations/: __init__.py  github.py  linear.py
src/python-sdk/src/glyx_python_sdk/models/: __init__.py  cursor.py  response.py  task.py
src/python-sdk/src/glyx_python_sdk/tests/: test_composable_agent.py  test_composable_agent_integration.py  test_config_validation.py
src/python-sdk/src/glyx_python_sdk/tools/: __init__.py  agent_crud.py  coding_agents.py  device_dispatch.py  filesystem.py  install_agents.py  interact_with_user.py  orchestrate.py  postman.py  session_tools.py  use_grok.py
supabase/.temp/: pooler-url  project-ref
supabase/migrations/: 20241204_drop_actor_check.sql  20241204_rename_activities_to_events.sql  20251204_create_features_and_templates.sql  20260215_add_last_seen_to_paired_devices.sql  20260215_add_result_fields_to_agent_tasks.sql  20260215_create_hitl_requests.sql  20260215_daemon_user_rls.sql  20260215_enable_realtime_agent_tasks.sql  20260216_daemon_rpc_functions.sql  20260216_drop_daemon_rpc_functions.sql  20260221_add_working_directory_to_paired_devices.sql  20260228215310_remote_schema.sql  20260228215529_cloud_instances_and_device_type.sql  20260318000000_pairing_codes.sql  20260319000000_pairing_codes_token.sql  20260319000001_unique_connections.sql
tests/: conftest.py  test_client_integration.py  test_composable_agent.py  test_config_validation.py  test_framework.py  test_github_integration.py  test_hitl_integration.py  test_linear_webhook.py  test_linear_webhooks.py  test_notifications.py  test_pairing.py  test_response_events.py  test_tools.py
tests/fixtures/: heroku_cli_sample.json  ngrok_cli_sample.json
(+7 files in other folders)
