[project]
name = "glyx"
version = "0.1.0"
description = "Composable AI agent framework with FastMCP integration"
readme = "README.md"
authors = [
    { name = "htelsiz", email = "hakantelsiz@utexas.edu" }
]
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0.0",
    "pydantic>=2.0.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "openai>=1.0.0",
    "langfuse>=2.0.0",
    "python-dotenv>=1.0.0",
    "openai-agents>=0.4.2",
    "openinference-instrumentation-openai-agents>=1.3.0",
    "mem0ai>=1.0.0",
    "shot-scraper>=1.8",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.3.0",
    "mypy>=1.9.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
glyx-mcp = "glyx.mcp.server:main"
glyx-mcp-http = "glyx.mcp.server:main_http"
glyx-tasks = "glyx.tasks.server:main"

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
