[project]
name = "glyx"
version = "0.1.0"
description = "Composable AI agent framework with FastMCP integration"
readme = "README.md"
authors = [
    { name = "htelsiz", email = "hakantelsiz@utexas.edu" }
]
requires-python = ">=3.11"
dependencies = [
    "glyx-python-sdk",
    "fastmcp>=2.0.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "httpx>=0.27.0",
    "dbos>=1.0.0",
    "logfire[fastapi]>=4.16.0",
    "pydantic-ai>=1.27.0",
    "pytest-asyncio>=1.2.0",
]

[tool.uv.sources]
glyx-python-sdk = { path = "src/python-sdk", editable = true }

[project.optional-dependencies]
dev = [
    "ruff>=0.3.0",
    "mypy>=1.9.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "pytest-httpx>=0.30.0",
    "pre-commit>=3.0.0",
    "flake8>=7.0.0",
    "black>=24.0.0",
]

[project.scripts]
glyx-mcp = "glyx_mcp.server:main"
glyx-mcp-http = "api.server:run_http"

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pre-commit>=4.5.0",
    "pytest-cov>=7.0.0",
    "pytest-httpx>=0.35.0",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
