[project]
name = "glyx-python-sdk"
version = "0.0.1"
description = "Python SDK for the Glyx AI orchestration framework"
readme = "README.md"
authors = [
    { name = "htelsiz", email = "hakantelsiz@utexas.edu" }
]
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["ai", "orchestration", "agents", "mcp", "fastmcp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "fastmcp>=2.0.0",
    "openai-agents[litellm]>=0.4.2",
    "mem0ai>=1.0.0",
    "openai>=1.0.0",
    "langfuse>=2.0.0",
    "supabase>=2.0.0",
    "python-dotenv>=1.0.0",
    "openinference-instrumentation-openai-agents>=1.3.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.3.0",
    "mypy>=1.9.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/htelsiz/glyx-mcp"
Documentation = "https://github.com/htelsiz/glyx-mcp/blob/main/README.md"
Repository = "https://github.com/htelsiz/glyx-mcp"

[tool.uv]
package = true

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["src/glyx_python_sdk/tests"]
asyncio_mode = "auto"
markers = [
    "integration: Integration tests (require subprocess execution)",
    "e2e: End-to-end tests (require real agent CLIs)",
]
